Navbar issue when collapsing menu

--- a/forum-react-app/src/styles/components/_navbar.scss
+++ b/forum-react-app/src/styles/components/_navbar.scss
@@ -8,7 +8,6 @@
     left: 98px;
     right: 357px;
     top: 0;
-    background-color: #161B3B;
     transition: left ease 0.3s;
     min-width: 700px;
 
